# TleilaxRL_modern

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml  main.yml
docs/: _config.yml  blog.html  index.markdown  index.md
docs/_data/: navigation.yml
docs/_layouts/: defolto.html
docs/_posts/: 2020-12-03-started-blog.md  2020-12-03-welcome-to-jekyll.markdown  2020-12-03-what-is-this.markdown
tleilax/: CMakeLists.txt  CMakeSettings.json
tleilax/apps/: CMakeLists.txt  font_sizes.c  instanced_rendering.c  orbit_test.c  paralax_star_render.c  render_to_texture.c  shaders_rlgl_mesh_instanced.c  star_shader.c  tleilax-app.c
tleilax/assets/shaders/: bloom.vertex.glsl  scanlines.fs
tleilax/include/ECS/: ecs.h
tleilax/include/galaxy/: galaxy.h  starsystem.h
tleilax/include/random/: random.h
tleilax/include/tleilax/: graphics.h  tleilax.h
tleilax/include/tleilax/views/: galaxy_view.h  starsystem_view.h
tleilax/scripts/lua/old/names/: greek  indian
tleilax/scripts/lua/old/states/: galaxymap.gui
tleilax/scripts/shaders/: hdr.fs  red.fs  simplex.fs  simplex.vs
tleilax/src/: CMakeLists.txt  ecs.c  galaxy.c  graphics.c  lua_utils.c  random.c  starsystem.c  tleilax.c  tleilax_statemachine.c
tleilax/src/state_views/: galaxy_view.c  intro_view.c  starsystem_view.c
tleilax/tests/: CMakeLists.txt  test_cstatemachine.c  test_ecs.c  test_galaxy.c  test_starsystem.c  test_tleilax.c
